# orgclaw

./: CHANGELOG.md  CODE_REVIEW.md  INSTALL_FOR_OPENCLAW.md  LICENSE  README.md  README_OPENCLAW.md  ROADMAP.md  SKILL.md  SKILL_PACKAGE.md  TEST_REPORT.md  install.py  pyproject.toml  requirements.txt  setup.py  test_core.py  test_quick.py  test_skill.py
.github/ISSUE_TEMPLATE/: organization_layer.md
.openclaw/: skill.py
hooks/: post_task.py
orgclaw/: __init__.py  auto_extract.py  patterns_client.py  team_share.py
orgclaw/analyzer/: extractor.py  quality_scorer.py
orgclaw/cli/: claw.py
orgclaw/storage/: vector_store.py
tests/: __init__.py
