[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orgclaw"
version = "0.1.0"
description = "Organization knowledge federation system for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Conpera", email = "team@conpera.ai"}
]
keywords = ["openclaw", "agent", "experience", "knowledge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "networkx>=3.2.1",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
orgclaw = "orgclaw.engine.cli.claw:main"

[project.entry-points."openclaw.skills"]
orgclaw = "orgclaw.openclaw.skill:OrgClawSkill"

[tool.hatch.build.targets.wheel]
packages = ["orgclaw"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
